Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: minikubelocal.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: first-k8s-service
                port:
                  number: 5076
